--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
+
+
 {% include head.html %}
 
 <body>
   {% include header.html %}
-  {% include over.html %}
-  {% include werk.html %}
-  {% include page_content.html %}
+  {% include about.html %}
+  {% include project.html %}
   {% include contact.html %}
   {% include footer.html %}
-  {% include js.html %}
+  {% include scripts.html %}
 </body>
 </html>
