--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,22 +1,15 @@
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="{{ site.description }}">
-    <meta name="author" content="{{ site.author }}">
+  <meta charset="utf-8">
+  <title>{{ page.title }}</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Bootstrap Core CSS -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-<<<<<<< HEAD
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
 
-=======
-    <link rel="stylesheet" type="text/css" href="/_assets/style.css">
-    
-<link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css">
->>>>>>> origin/gh-pages
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+
 
 </head>
