--- a/_includes/project.html
+++ b/_includes/project.html
@@ -1,1 +1,127 @@
 
+<section id="project" class="container content-section text-center">
+
+      <div class="container">
+
+          <div class="row">
+
+            <!--  <div class="col-lg-12">
+                  <h1 class="page-header">Thumbnail Gallery</h1>
+              </div> -->
+
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="http://res.cloudinary.com/liberationfront/image/upload/v1493026904/TN-4-compressor_ukbxtb.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="http://res.cloudinary.com/liberationfront/image/upload/v1493026992/TN-6-compressor_g3b6vj.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="http://res.cloudinary.com/liberationfront/image/upload/v1493027539/TN-10-compressor_rq9kqh.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_2.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_20.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_8.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_1.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_3.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_13.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_19.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_18.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_15.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_17.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_9.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_16.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_5.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_14.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_11.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_7.png" alt="">
+                  </a>
+              </div>
+              <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                  <a class="thumbnail" href="#">
+                      <img class="img-responsive" src="/img/TN_12.png" alt="">
+                  </a>
+              </div>
+          </div>
+      </div>
+
+      <!--  <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+              <br/><br/>
+              <h2>About Landing-Page</h2>
+              <br/>
+                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
+                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
+                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <br/>
+              </div>
+        </div> -->
+    </section>
