--- a/_includes/project.html
+++ b/_includes/project.html
@@ -26,7 +26,7 @@
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_2.png" alt="">
+                      <img class="img-responsive" src="img/TN_2.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
