--- a/_includes/project.html
+++ b/_includes/project.html
@@ -31,7 +31,7 @@
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_20.png" alt="">
+                      <img class="img-responsive" src="TN_20.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
