--- a/_includes/project.html
+++ b/_includes/project.html
@@ -5,10 +5,6 @@
 
           <div class="row">
 
-            <!--  <div class="col-lg-12">
-                  <h1 class="page-header">Thumbnail Gallery</h1>
-              </div> -->
-
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
                       <img class="img-responsive" src="http://res.cloudinary.com/liberationfront/image/upload/v1493026904/TN-4-compressor_ukbxtb.png" alt="">
@@ -26,12 +22,12 @@
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="TN2.png" alt="">
+                      <img class="img-responsive" src="img/TN2.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="TN20.png" alt="">
+                      <img class="img-responsive" src="img/TN20.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
@@ -41,87 +37,76 @@
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN1.png" alt="">
+                      <img class="img-responsive" src="img/TN1.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN3.png" alt="">
+                      <img class="img-responsive" src="img/TN3.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN13.png" alt="">
+                      <img class="img-responsive" src="img/TN13.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN19.png" alt="">
+                      <img class="img-responsive" src="img/TN19.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN18.png" alt="">
+                      <img class="img-responsive" src="img/TN18.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN15.png" alt="">
+                      <img class="img-responsive" src="img/TN15.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN17.png" alt="">
+                      <img class="img-responsive" src="img/TN17.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN9.png" alt="">
+                      <img class="img-responsive" src="img/TN9.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN16.png" alt="">
+                      <img class="img-responsive" src="img/TN16.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN5.png" alt="">
+                      <img class="img-responsive" src="img/TN5.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN14.png" alt="">
+                      <img class="img-responsive" src="img/TN14.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN11.png" alt="">
+                      <img class="img-responsive" src="img/TN11.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN7.png" alt="">
+                      <img class="img-responsive" src="img/TN7.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN12.png" alt="">
+                      <img class="img-responsive" src="img/TN12.png" alt="">
                   </a>
               </div>
           </div>
       </div>
 
-      <!--  <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-              <br/><br/>
-              <h2>About Landing-Page</h2>
-              <br/>
-                <p>Landing-Page is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/landing-page/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>The Jekyll version is brought to you by <a href="https://github.com/swcool">Shane Weng</a></p>
-                <p>This theme features stock photos by <a href="http://join.deathtothestockphoto.com//">Death to the Stock Photo</a>.</p>
-                <p>Landing-Page includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
-                <br/>
-              </div>
-        </div> -->
+   
     </section>
