--- a/_includes/project.html
+++ b/_includes/project.html
@@ -26,87 +26,87 @@
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="TN_2.png" alt="">
+                      <img class="img-responsive" src="img/TN2.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="TN_20.png" alt="">
+                      <img class="img-responsive" src="img/TN20.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_8.png" alt="">
+                      <img class="img-responsive" src="img/TN8.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_1.png" alt="">
+                      <img class="img-responsive" src="/img/TN1.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_3.png" alt="">
+                      <img class="img-responsive" src="/img/TN3.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_13.png" alt="">
+                      <img class="img-responsive" src="/img/TN13.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_19.png" alt="">
+                      <img class="img-responsive" src="/img/TN19.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_18.png" alt="">
+                      <img class="img-responsive" src="/img/TN18.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_15.png" alt="">
+                      <img class="img-responsive" src="/img/TN15.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_17.png" alt="">
+                      <img class="img-responsive" src="/img/TN17.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_9.png" alt="">
+                      <img class="img-responsive" src="/img/TN9.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_16.png" alt="">
+                      <img class="img-responsive" src="/img/TN16.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_5.png" alt="">
+                      <img class="img-responsive" src="/img/TN5.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_14.png" alt="">
+                      <img class="img-responsive" src="/img/TN14.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_11.png" alt="">
+                      <img class="img-responsive" src="/img/TN11.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_7.png" alt="">
+                      <img class="img-responsive" src="/img/TN7.png" alt="">
                   </a>
               </div>
               <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                   <a class="thumbnail" href="#">
-                      <img class="img-responsive" src="/img/TN_12.png" alt="">
+                      <img class="img-responsive" src="/img/TN12.png" alt="">
                   </a>
               </div>
           </div>
